--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -24,4 +24,5 @@
 
 .main {
     flex: 1;
+    margin-left: 32px;
 }
